config/rules.v4
# Generated by iptables-save v1.6.1 on Thu Aug  1 14:23:22 2019
*mangle
:PREROUTING ACCEPT [3051:7088488]
:INPUT ACCEPT [2857:7075098]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2672:160500]
:POSTROUTING ACCEPT [2672:160500]
-A OUTPUT -m string --string "BitTorrent" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string "BitTorrent protocol" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string "peer_id=" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string ".torrent" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string "announce.php?passkey=" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string "torrent" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string "announce" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string "info_hash" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string "get_peers" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string "announce_peer" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string "find_node" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string "GET /scrape?info_hash=" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string "GET /announce.php?info_hash=" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string "GET /scrape.php?info_hash=" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string "GET /scrape.php?passkey=" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --hex-string "|13426974546f7272656e742070726f746f636f6c|" --algo bm --to 65535 -j DROP
COMMIT
# Completed on Thu Aug  1 14:23:22 2019
# Generated by iptables-save v1.6.1 on Thu Aug  1 14:23:22 2019
*nat
:PREROUTING ACCEPT [240:16022]
:INPUT ACCEPT [55:3560]
:OUTPUT ACCEPT [8:688]
:POSTROUTING ACCEPT [8:688]
-A PREROUTING -p udp -m multiport --dports 81:138 -j REDIRECT --to-ports 23
-A PREROUTING -p tcp -m multiport --dports 81:138 -j REDIRECT --to-ports 23
-A PREROUTING -p tcp -m multiport --dports 139:187 -j REDIRECT --to-ports 24
-A PREROUTING -p udp -m multiport --dports 139:187 -j REDIRECT --to-ports 24
-A PREROUTING -p tcp -m multiport --dports 188:236 -j REDIRECT --to-ports 25
-A PREROUTING -p udp -m multiport --dports 188:236 -j REDIRECT --to-ports 25
-A PREROUTING -p tcp -m multiport --dports 237:285 -j REDIRECT --to-ports 26
-A PREROUTING -p udp -m multiport --dports 237:285 -j REDIRECT --to-ports 26
-A PREROUTING -p tcp -m multiport --dports 286:334 -j REDIRECT --to-ports 27
-A PREROUTING -p udp -m multiport --dports 286:334 -j REDIRECT --to-ports 27
-A PREROUTING -p tcp -m multiport --dports 335:383 -j REDIRECT --to-ports 28
-A PREROUTING -p udp -m multiport --dports 335:383 -j REDIRECT --to-ports 28
-A PREROUTING -p tcp -m multiport --dports 384:432 -j REDIRECT --to-ports 29
-A PREROUTING -p udp -m multiport --dports 384:432 -j REDIRECT --to-ports 29
-A PREROUTING -p tcp -m multiport --dports 433:481 -j REDIRECT --to-ports 30
-A PREROUTING -p udp -m multiport --dports 433:481 -j REDIRECT --to-ports 30
-A PREROUTING -p tcp -m multiport --dports 482:530 -j REDIRECT --to-ports 31
-A PREROUTING -p udp -m multiport --dports 482:530 -j REDIRECT --to-ports 31
-A PREROUTING -p tcp -m multiport --dports 531:579 -j REDIRECT --to-ports 32
-A PREROUTING -p udp -m multiport --dports 531:579 -j REDIRECT --to-ports 32
-A PREROUTING -p tcp -m multiport --dports 580:628 -j REDIRECT --to-ports 33
-A PREROUTING -p udp -m multiport --dports 580:628 -j REDIRECT --to-ports 33
-A PREROUTING -p tcp -m multiport --dports 629:677 -j REDIRECT --to-ports 34
-A PREROUTING -p udp -m multiport --dports 629:677 -j REDIRECT --to-ports 34
-A PREROUTING -p tcp -m multiport --dports 678:726 -j REDIRECT --to-ports 35
-A PREROUTING -p udp -m multiport --dports 678:726 -j REDIRECT --to-ports 35
-A PREROUTING -p tcp -m multiport --dports 727:775 -j REDIRECT --to-ports 36
-A PREROUTING -p udp -m multiport --dports 727:775 -j REDIRECT --to-ports 36
-A PREROUTING -p tcp -m multiport --dports 776:824 -j REDIRECT --to-ports 37
-A PREROUTING -p udp -m multiport --dports 776:824 -j REDIRECT --to-ports 37
-A PREROUTING -p tcp -m multiport --dports 825:873 -j REDIRECT --to-ports 38
-A PREROUTING -p udp -m multiport --dports 825:873 -j REDIRECT --to-ports 38
-A PREROUTING -p tcp -m multiport --dports 874:922 -j REDIRECT --to-ports 39
-A PREROUTING -p udp -m multiport --dports 874:922 -j REDIRECT --to-ports 39
-A PREROUTING -p tcp -m multiport --dports 923:972 -j REDIRECT --to-ports 40
-A PREROUTING -p udp -m multiport --dports 923:972 -j REDIRECT --to-ports 40
-A PREROUTING -p tcp -m multiport --dports 973:1000 -j REDIRECT --to-ports 41
-A PREROUTING -p udp -m multiport --dports 973:1000 -j REDIRECT --to-ports 41
-A PREROUTING -p tcp -m multiport --dports 1001:1023 -j REDIRECT --to-ports 42
-A PREROUTING -p udp -m multiport --dports 1001:1023 -j REDIRECT --to-ports 42
COMMIT
# Completed on Thu Aug  1 14:23:22 2019
# Generated by iptables-save v1.6.1 on Thu Aug  1 14:23:22 2019
*filter
:INPUT ACCEPT [29:1776]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2672:160500]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m multiport --dports 23:42 -j ACCEPT
-A INPUT -p udp -m multiport --dports 23:42 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
COMMIT
# Completed on Thu Aug  1 14:23:22 2019
